# Whisker build orchestration.
#
# Cross-platform cargo + gradle + xcodebuild invocation, factored out
# of `whisker-cli`, `whisker-dev-server`, and the `whisker-build`
# binary (called by gradle / xcodebuild during `whisker run`) so all
# three can share it without crate-cycle gymnastics.
#
# Tier 1 hot-patch construction lives in `whisker-dev-server::hotpatch`,
# not here — this crate's contract is "spawn cargo / gradle /
# xcodebuild and stage outputs". The hot-patch pipeline is its own
# concern with its own machinery (shim binaries, JumpTable, etc.).

[package]
name = "whisker-build"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Whisker build orchestration: cargo cross-compile + gradle / xcodebuild + xcframework wrap."

[dependencies]
anyhow = { workspace = true }
# SHA-256 hashing for `whisker-build modules`' `cargo_lock_sha256`
# field — the Gradle plugin keys its disk cache off that value.
sha2 = "0.10"
# Curated terminal output for the dev loop. Used by the `ui` module to
# replace ad-hoc `eprintln!` calls across whisker-build /
# whisker-dev-server / whisker-cli with structured step + status
# events. Stays a single shared crate so the three orchestration
# layers all hit the same look + feel.
indicatif = "0.17"
# Module-system discovery deserializes the `[package.metadata.whisker]`
# table, which cargo_metadata surfaces as a `serde_json::Value`.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Cargo metadata traversal — used by `whisker-build::modules` to
# walk the consuming app's dep tree and find each dep that declares
# a `[package.metadata.whisker]` table.
cargo_metadata = "0.18"

# CLI arg parsing for the `whisker-build` binary that Xcode Run
# Script Phase / Gradle plugin invoke. The library half is unchanged
# and stays import-only for whisker-cli + whisker-dev-server.
clap = { version = "4", features = ["derive"] }

[[bin]]
# The Run Script / Gradle plugin entry point. Library consumers
# (whisker-cli, whisker-dev-server) keep calling into `src/lib.rs`
# directly; the binary is just an `arg-parse → existing lib calls`
# shim, no logic duplication.
name = "whisker-build"
path = "src/main.rs"
