# Whisker CNG (Continuous Native Generation).
#
# Generates the Android / iOS host projects under `gen/{android,ios}/`
# from the user's `whisker.rs` (= `whisker_config::Config`).
# Modelled on Expo's CNG: the source of truth is the declarative
# config, the platforms directory are build artifacts, never committed.
#
# Pure logic crate — no CLI surface. `whisker-cli` consumes the
# `sync_android` / `sync_ios` entry points and handles user interaction.

[package]
name = "whisker-cng"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Whisker Continuous Native Generation — declarative Android/iOS project generation from whisker.rs."

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
whisker-config = { workspace = true }
# For the iOS remote-SwiftPM coordinates (`WHISKER_IOS_SPM_URL` /
# `WHISKER_IOS_SPM_VERSION`) the generated pbxproj's
# `XCRemoteSwiftPackageReference` is rendered from. Single source of
# truth shared with whisker-build's aggregator generator. No cycle:
# whisker-build does not depend on whisker-cng.
whisker-build = { workspace = true }
# Walks the user crate's dep graph to find dependencies that declare
# `[package.metadata.whisker.plugins.<name>]` in their `Cargo.toml`.
# Same crate `whisker-build` uses for module discovery — pinned at
# the same major version so both subsystems agree on the dep-graph
# shape.
cargo_metadata = "0.18"
# `Plugin` / `PluginConfig` trait + IR types the engine drives the
# plugin pipeline against. The compose module turns each user-side
# `Config.plugins[name]` JSON entry back into the plugin's typed
# Config via this crate's helpers.
whisker-plugin = { workspace = true }

# Tiny stdin/stdout echo-style plugin binary the subprocess
# integration test in `tests/subprocess.rs` spawns. Declared here
# so it gets a `CARGO_BIN_EXE_whisker-cng-fixture-echo-plugin` env
# var available inside the integration test. Not intended for end
# users; safe to ignore in any `cargo install` flow (pre-alpha).
[[bin]]
name = "whisker-cng-fixture-echo-plugin"
path = "tests/fixtures/echo_plugin.rs"
test = false
bench = false
doc = false
